apply plugin: 'com.android.library'
apply plugin: 'maven-publish'

android {
    namespace "de.KnollFrank.lib.settingssearch"
    compileSdk 34

    defaultConfig {
        minSdkVersion 24
        vectorDrawables.useSupportLibrary = true
    }

    buildTypes {
        release {
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.txt'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
        coreLibraryDesugaringEnabled true
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

    publishing {
        singleVariant('release') {
            withSourcesJar()
        }
    }
    lint {
        targetSdk 34
    }
    testOptions {
        targetSdk 34
    }
}

dependencies {
    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'

    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'androidx.recyclerview:recyclerview:1.3.2'
    implementation 'androidx.preference:preference:1.2.1'
    // https://mvnrepository.com/artifact/com.google.guava/guava
    implementation 'com.google.guava:guava:33.5.0-android'
    // https://mvnrepository.com/artifact/org.jgrapht/jgrapht-core
    implementation 'org.jgrapht:jgrapht-core:1.5.2'
    // https://mvnrepository.com/artifact/commons-codec/commons-codec
    implementation 'commons-codec:commons-codec:1.19.0'
    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    implementation 'org.apache.commons:commons-lang3:3.19.0'
    // https://mvnrepository.com/artifact/com.codepoetics/ambivalence
    implementation 'com.codepoetics:ambivalence:0.2'
    // https://mvnrepository.com/artifact/com.google.code.gson/gson
    implementation("com.google.code.gson:gson:2.13.2")
    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.22"))
    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
    implementation 'androidx.test.espresso:espresso-idling-resource:3.6.1'

    def room_version = "2.8.4"
    implementation "androidx.room:room-runtime:$room_version"
    annotationProcessor "androidx.room:room-compiler:$room_version"
}

publishing {
    publications {
        release(MavenPublication) {
            groupId = 'com.github.KnollFrank'
            artifactId = 'SettingsSearch'
            version = 'v2.5.1'

            afterEvaluate {
                from components.release
            }
        }
    }
}

tasks.withType(GenerateModuleMetadata).configureEach {
    enabled = false
}